[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"
authors = ["Aarju patel <aarjupatel922003@gmail.com>"]
description = "A web server for file uploads and downloads"

[dependencies]
actix-web = "4.4"
actix-multipart = "0.6"
actix-files = "0.6"
futures = "0.3"
tokio = { version = "1.34", features = ["full"] }
uuid = { version = "1.6", features = ["v4"] }
mime = "0.3"
sanitize-filename = "0.5"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
config = "0.13"
